manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"ports": {"default":"demo"}}'
spec:
  selector:
    app: demo
  ports:
  - port: 8080
    targetPort: 8080
