manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  labels:
    name: demo
  annotations:
    kubernetes.io/ingress.global-static-ip-name: demo
    networking.gke.io/managed-certificates: demo
    networking.gke.io/v1beta1.FrontendConfig: demo
    kubernetes.io/ingress.class: gce
spec:
  rules:
  - host: demo.joshuah.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: demo
            port: 
              number: 8080
